0024924: ShapeFix_SplitTool doesn't verify the new range after cutting an edge

Validate the new cut range before setting it to edge